# graphicEditor

./: CMakeLists.txt  consts.h  main.cpp
Canvas/: canvas.cpp  canvas.h
ColorPicker/: colorPicker.cpp  colorPicker.h
Events/: events.cpp  events.h
Hsv/: hsv.cpp  hsv.h
Hsv/HsvConverter/: hsvConverter.cpp
Hsv/HsvConveter/: hsvConverter.cpp  hsvConverter.h
PluginManager/: pluginManager.cpp  pluginManager.h
Plugins/BoxBlur/src/: BoxBlur.cpp
Tools/: baseTool.h  tools.cpp  tools.h
Tools/PluginsTools/: pluginsApi.h  pluginsTols.cpp  pluginsTools.cpp  pluginsTools.h
Tools/ToolBar/: toolBar.cpp  toolBar.h
Tools/ToolManager/: toolManager.cpp  toolManager.h
TopMenu/: topMenu.cpp  topMenu.h
VisualOptions/thickSlider/: thickSlider.cpp  thickSlider.h
